--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "postcss-nested": "^4.1.2",
-    "uuid": "^3.3.2",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.1.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
