--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv-webpack": "^1.7.0",
     "postcss-nested": "^4.1.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
