--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ HOST=127.0.0.1
 # Express port
 PORT=3000
 
-# API enpoint for frontend's request
+# API endpoint for frontend's request
 API_ENDPOINT=http://localhost:3000
 
 # JWT secret string for signing tokens
