--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "argon2": "^0.24.0",
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
