--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "postcss-nested": "^4.1.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
-    "vuejs-auto-complete": "^0.9.0"
+    "vuejs-auto-complete": "^0.9.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
