--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuejs-auto-complete": "^0.9.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
