--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,13 +4,20 @@ services:
     build:
       dockerfile: "backend/docker/Dockerfile.prod"
       context: .
+    ports:
+      - ${API_PORT}:${API_PORT}
+    env_file:
+      - .env
+    depends_on:
+      - mongodb
+  frontend:
+    build:
+      dockerfile: "frontend/docker/Dockerfile.prod"
+      context: .
     env_file:
       - .env
     ports:
-      - ${PORT}:${PORT}
-    depends_on:
-      - mongodb
-
+      - 8080:8080
   mongodb:
     image: mongo
     volumes:
