--- a/frontend/docker/Dockerfile.prod
+++ b/frontend/docker/Dockerfile.prod
@@ -18,6 +18,4 @@ RUN yarn global add http-server spa-http-server
 
 COPY --from=build-stage /frontend/dist /
 
-EXPOSE 8080
-
-CMD ["http-server", "--push-state", "-c-0"]
+CMD ["http-server", "--push-state", "-c-0", "-p 8080"]
