--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,13 @@
     "vue-router": "^3.0.1",
     "vuejs-auto-complete": "^0.9.0",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
-  },
-  "devDependencies": {
+    "vuex-persistedstate": "^2.5.4",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
-    "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.5.21"
+  },
+  "devDependencies": {
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
