frontend docker-dev setup

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,7 +21,15 @@ services:
       - mongodb
     stdin_open: true
     tty: true
-
+  frontend:
+    build:
+      dockerfile: "frontend/docker/Dockerfile.dev"
+      context: .
+    ports:
+      - 8080:8080
+    volumes:
+      - ./frontend:/frontend
+      - /frontend/node_modules
   mongodb:
     image: mongo
     volumes:
