--- a/.env.sample
+++ b/.env.sample
@@ -1,36 +1,17 @@
 # Node environment
 NODE_ENV=development
 
-# Express host
-HOST=127.0.0.1
-
-# Express port
-PORT=3000
+# Express server port
+API_PORT=3000
 
 # API endpoint for frontend's request
-API_ENDPOINT=http://localhost:3000
+API_ENDPOINT=http://api:3000
+
+# Frontend static server port. Used only in docker-compose production configuration
+FRONTEND_PORT=8080
 
 # JWT secret string for signing tokens
 JWT_SECRET_STRING=secret_string
 
-### MongoDB settings ###
-# MongoDB local port
-MONGODB_LOCAL_PORT=27017
-
-# MongoDB root username
-MONGODB_ROOT_USERNAME=root
-
-# MongoDB root password
-MONGODB_ROOT_PASSWORD=root
-
-# MongoDB host
-MONGODB_HOST=localhost
-
-# MongoDB auth source
-MONGODB_AUTH_SOURCE=admin
-
-# MongoDB database name
-MONGODB_DATABASE=db-interface-test
-
-# MongoDB test database name
-MONGODB_DATABASE_TEST=db-interface-test
+# MongoDB URL for connection
+MONGO_URL=mongodb://mongodb:27017/db-interface
