--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@panter/vue-i18next": "^0.15.1",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
     "axios": "^0.18.1",
+    "babel-eslint": "^10.0.1",
     "dotenv-webpack": "^1.7.0",
+    "i18next": "^17.0.6",
     "postcss-nested": "^4.1.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.21",
     "vuejs-auto-complete": "^0.9.0",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "babel-eslint": "^10.0.1",
-    "vue-template-compiler": "^2.5.21"
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "eslint-plugin-vue": "^5.0.0"
