--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "babel-eslint": "^10.0.1",
     "dotenv-webpack": "^1.7.0",
     "i18next": "^17.0.6",
+    "i18next-browser-languagedetector": "^3.0.1",
     "postcss-nested": "^4.1.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
