--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
     "nodemon": "^1.18.10"
