--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.4.19",
+    "mongoose-intl": "^3.1.1",
     "nodemon": "^1.18.10"
   }
 }
