--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^6.1.0",
     "eslint-config-codex": "github:codex-team/eslint-config",
     "husky": "^3.0.1",
-    "lint-staged": "^9.2.0"
+    "lint-staged": "^9.2.0",
+    "googleapis": "^39.2.0"
   }
 }
