--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@vue/cli-service": "^3.4.0",
     "axios": "^0.18.1",
     "babel-eslint": "^10.0.1",
+    "fast-json-patch": "^2.2.1",
     "i18next": "^17.0.6",
     "i18next-browser-languagedetector": "^3.0.1",
     "postcss-nested": "^4.1.2",
