--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-async-errors": "^3.1.1",
+    "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.4.19",
