--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   ],
   "devDependencies": {
     "eslint": "^6.1.0",
-    "eslint-config-codex": "github:codex-team/eslint-config",
-    "husky": "^3.0.1",
-    "lint-staged": "^9.2.0"
+    "eslint-config-codex": "github:codex-team/eslint-config"
   }
 }
