--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install ESLint
+      run: npm install eslint
     - name: Start ESlint
       uses: stefanoeb/eslint-action@master
       with:
