--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,6 @@
 name: db-interface
 
-on:
-  push:
-    branches:
-    - !stage
+on: push
 
 jobs:
   build_api:
@@ -38,3 +35,30 @@ jobs:
       uses: stefanoeb/eslint-action@master
       with:
         args: . --ext .js --ext .vue
+
+on:
+  push:
+    branches:
+      - stage
+
+jobs:
+  push_docker_api:
+    name: Push API image
+    runs-on: ubuntu-latest
+    needs: build_api
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Push docker image
+        run: docker tag db-interface-api dhcenter/db-interface-api:stage
+        run: docker push dhcenter/db-interface-api:stage
+
+  push_docker_frontend:
+    name: Push frontend image
+    runs-on: ubuntu-latest
+    needs: build_frontend
+
+    steps:
+      - name: Push docker image
+        run: docker tag db-interface-frontend dhcenter/db-interface-frontend:stage
+        run: docker push dhcenter/db-interface-frontend:stage
