--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,11 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build docker image
       run: docker image build -t db-interface-api -f backend/docker/Dockerfile.prod .
+    - name: Check stage branch
+    if: GITHUB_REF == 'refs/heads/stage'
+    run: |
+      docker tag db-interface-api dhcenter/db-interface-api:stage
+      docker push dhcenter/db-interface-api:stage
 
   build_frontend:
     name: Build frontend image
@@ -22,8 +27,11 @@ jobs:
       run: echo "VUE_APP_API_ENDPOINT=http://5.53.124.45:3000" > ./frontend/.env
     - name: Build docker image
       run: docker image build -t db-interface-frontend -f frontend/docker/Dockerfile.prod .
-    - name: Get GITHUB_REF
-      run: echo ${GITHUB_REF}
+    - name: Check stage branch
+      if: GITHUB_REF == 'refs/heads/stage'
+      run: |
+        docker tag db-interface-frontend dhcenter/db-interface-frontend:stage
+        docker push dhcenter/db-interface-frontend:stage
 
   check_eslint:
     name: Check ESLint problems
