--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Build docker image
       run: docker image build -t db-interface-api -f backend/docker/Dockerfile.prod .
     - name: Check stage branch
-      if: github.ref == 'refs/heads/start-using-actions'
+      if: github.ref == 'refs/heads/stage'
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker tag db-interface-api dhcenter/db-interface-api:stage
@@ -30,7 +30,7 @@ jobs:
     - name: Build docker image
       run: docker image build -t db-interface-frontend -f frontend/docker/Dockerfile.prod .
     - name: Check stage branch
-      if: github.ref == 'refs/heads/start-using-actions'
+      if: github.ref == 'refs/heads/stage'
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         docker tag db-interface-frontend dhcenter/db-interface-frontend:stage
