--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vue-unique-id": "^2.0.0",
     "vuejs-auto-complete": "^0.9.0",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4"
