--- a/frontend/docker/Dockerfile.prod
+++ b/frontend/docker/Dockerfile.prod
@@ -9,11 +9,10 @@ RUN yarn install --prod
 
 RUN cd frontend && yarn build
 
-# production stage
-FROM node:10-alpine
-
-RUN yarn global add http-server spa-http-server
-
-COPY --from=build-stage /frontend/dist /
-
-CMD ["http-server", "--push-state", "-c-0", "-p 8080", "-i False"]
+# production environment
+FROM nginx:1.17.3-alpine
+COPY --from=build-stage /frontend/dist /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY frontend/docker/nginx/nginx.conf /etc/nginx/conf.d
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
