--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@panter/vue-i18next": "^0.15.1",
+    "@sentry/browser": "^5.6.3",
+    "@sentry/integrations": "^5.6.1",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "axios": "^0.19.0",
