add sentry for backend

--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,6 @@ JWT_SECRET_STRING=secret_string
 
 # MongoDB URL for connection
 MONGO_URL=mongodb://mongodb:27017/db-interface
+
+# Sentry DSN for errors catching
+SENTRY_DSN=
