--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@sentry/node": "5.6.2",
     "argon2": "^0.24.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
