--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,5 @@
 # API endpoint for frontend's request
 VUE_APP_API_ENDPOINT=http://localhost:3000
+
+# Sentry DSN for error catching
+VUE_APP_SENTRY_DSN=https://ae7266f5e23f47dda6ee1c1d70c77013@sentry.io/1540348
