--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -2,4 +2,4 @@
 VUE_APP_API_ENDPOINT=http://localhost:3000
 
 # Sentry DSN for error catching
-VUE_APP_SENTRY_DSN=https://ae7266f5e23f47dda6ee1c1d70c77013@sentry.io/1540348
+VUE_APP_SENTRY_DSN=
