--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vue/cli-service": "^3.11.0",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
+    "codex-notifier": "^1.1.2",
     "fast-json-patch": "^2.2.1",
     "i18next": "^17.0.12",
     "i18next-browser-languagedetector": "^3.0.3",
