--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@sentry/node": "5.6.2",
     "argon2": "^0.24.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
