--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
         if: github.ref == 'refs/heads/stage'
         uses: garygrossgarten/github-action-ssh@v0.3.0
         with:
-          command: cd ~/db-interface-stage/ && ./deploy.sh
+          command: cd ~/st-retrospect/stage/db-interface/ && ./deploy.sh
           host: ${{ secrets.SERVER_HOST }}
           username: root
           privateKey: ${{ secrets.PRIVATE_KEY }}
@@ -81,7 +81,7 @@ jobs:
         if: github.ref == 'refs/heads/prod'
         uses: garygrossgarten/github-action-ssh@v0.3.0
         with:
-          command: cd ~/db-interface-prod/ && ./deploy.sh
+          command: cd ~/st-retrospect/prod/db-interface/ && ./deploy.sh
           host: ${{ secrets.SERVER_HOST }}
           username: root
           privateKey: ${{ secrets.PRIVATE_KEY }}
