--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose-intl": "^3.1.1",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "uuid": "^3.4.0"
   }
 }
