add ability to load main persons photo

--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,10 @@ MONGO_URL=mongodb://mongodb:27017/db-interface
 SENTRY_DSN=
 
 NOTIFY_URL=
+
+# AWS credentials for files uploading to AWS S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_KEY=
+
+# Endpoint for getting uploaded images
+IMAGE_HOSTING_ENDPOINT=https://d2wvyy6ymw1bub.cloudfront.net/
