--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,28 +7,28 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@panter/vue-i18next": "^0.15.1",
-    "@sentry/browser": "^5.6.3",
-    "@sentry/integrations": "^5.6.1",
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "axios": "^0.19.0",
-    "babel-eslint": "^10.0.2",
+    "@panter/vue-i18next": "^0.15.2",
+    "@sentry/browser": "^5.12.1",
+    "@sentry/integrations": "^5.12.0",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.0.3",
     "codex-notifier": "^1.1.2",
-    "fast-json-patch": "^2.2.1",
-    "i18next": "^17.0.12",
-    "i18next-browser-languagedetector": "^3.0.3",
+    "fast-json-patch": "^3.0.0-1",
+    "i18next": "^19.1.0",
+    "i18next-browser-languagedetector": "^4.0.1",
     "lodash.clonedeep": "^4.5.0",
-    "postcss-nested": "^4.1.2",
-    "vue": "^2.6.10",
+    "postcss-nested": "^4.2.1",
+    "vue": "^2.6.11",
     "vue-light-gallery": "^1.0.1",
-    "vue-router": "^3.1.2",
-    "vue-template-compiler": "^2.6.10",
+    "vue-router": "^3.1.5",
+    "vue-template-compiler": "^2.6.11",
     "vue-unique-id": "^2.0.0",
     "vue2-dropzone": "^3.6.0",
     "vuejs-auto-complete": "^0.9.0",
-    "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "eslint-plugin-vue": "^5.2.3"
