change endpoint in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -23,4 +23,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_KEY=
 
 # Endpoint for getting uploaded images
-IMAGE_HOSTING_ENDPOINT=https://d2wvyy6ymw1bub.cloudfront.net/
+IMAGE_HOSTING_ENDPOINT==https://images.st-retrospect.dh-center.ru/
