--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/parser": "^7.8.4",
+    "@babel/types": "7.0.0-beta.36",
     "@panter/vue-i18next": "^0.15.2",
     "@sentry/browser": "^5.12.1",
     "@sentry/integrations": "^5.12.0",
